src/backend/parser/flex-bison/bison_sql.output
Grammar

    0 $accept: input $end

    1 input: sql_stmt_list opt_semicolon

    2 sql_stmt_list: statement
    3              | sql_stmt_list ';' statement

    4 statement: create_statement
    5          | drop_statement
    6          | show_statement
    7          | select_statement
    8          | insert_statement

    9 show_statement: SHOW TABLE table_name

   10 create_statement: CREATE TABLE table_name '(' column_def_commalist ')'

   11 column_def_commalist: column_def
   12                     | column_def_commalist ',' column_def

   13 column_def: IDENTIFIER column_type

   14 column_type: INTEGER
   15            | DOUBLE
   16            | TEXT

   17 drop_statement: DROP TABLE table_name

   18 select_statement: SELECT '*' FROM IDENTIFIER

   19 insert_statement: INSERT INTO table_name '(' id_comma_list ')' VALUES '(' expr_list ')'

   20 expr_list: expr
   21          | expr_list ',' expr

   22 expr: literal_value

   23 literal_value: INT_CONST
   24              | DOUBLE_CONST
   25              | STRING
   26              | BLOB_STRING
   27              | NUL
   28              | TRUE
   29              | FALSE

   30 table_name: IDENTIFIER
   31           | IDENTIFIER '.' IDENTIFIER

   32 opt_semicolon: ';'
   33              | %empty

   34 id_comma_list: IDENTIFIER
   35              | id_comma_list ',' IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 19
')' (41) 10 19
'*' (42) 18
',' (44) 12 21 35
'.' (46) 31
';' (59) 3 32
error (256)
IDENTIFIER (258) 13 18 30 31 34 35
STRING (259) 25
BLOB_STRING (260) 26
INT_CONST (261) 23
TRUE (262) 28
FALSE (263) 29
DOUBLE_CONST (264) 24
DOUBLE (265) 15
TEXT (266) 16
INTEGER (267) 14
CREATE (268) 10
TABLE (269) 9 10 17
DROP (270) 17
SHOW (271) 9
NUL (272) 27
SELECT (273) 18
VALUES (274) 19
INTO (275) 19
INSERT (276) 19
FROM (277) 18


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
input (30)
    on left: 1, on right: 0
sql_stmt_list (31)
    on left: 2 3, on right: 1 3
statement (32)
    on left: 4 5 6 7 8, on right: 2 3
show_statement (33)
    on left: 9, on right: 6
create_statement (34)
    on left: 10, on right: 4
column_def_commalist (35)
    on left: 11 12, on right: 10 12
column_def (36)
    on left: 13, on right: 11 12
column_type (37)
    on left: 14 15 16, on right: 13
drop_statement (38)
    on left: 17, on right: 5
select_statement (39)
    on left: 18, on right: 7
insert_statement (40)
    on left: 19, on right: 8
expr_list (41)
    on left: 20 21, on right: 19 21
expr (42)
    on left: 22, on right: 20 21
literal_value (43)
    on left: 23 24 25 26 27 28 29, on right: 22
table_name (44)
    on left: 30 31, on right: 9 10 17 19
opt_semicolon (45)
    on left: 32 33, on right: 1
id_comma_list (46)
    on left: 34 35, on right: 19 35


State 0

    0 $accept: . input $end

    CREATE  shift, and go to state 1
    DROP    shift, and go to state 2
    SHOW    shift, and go to state 3
    SELECT  shift, and go to state 4
    INSERT  shift, and go to state 5

    input             go to state 6
    sql_stmt_list     go to state 7
    statement         go to state 8
    show_statement    go to state 9
    create_statement  go to state 10
    drop_statement    go to state 11
    select_statement  go to state 12
    insert_statement  go to state 13


State 1

   10 create_statement: CREATE . TABLE table_name '(' column_def_commalist ')'

    TABLE  shift, and go to state 14


State 2

   17 drop_statement: DROP . TABLE table_name

    TABLE  shift, and go to state 15


State 3

    9 show_statement: SHOW . TABLE table_name

    TABLE  shift, and go to state 16


State 4

   18 select_statement: SELECT . '*' FROM IDENTIFIER

    '*'  shift, and go to state 17


State 5

   19 insert_statement: INSERT . INTO table_name '(' id_comma_list ')' VALUES '(' expr_list ')'

    INTO  shift, and go to state 18


State 6

    0 $accept: input . $end

    $end  shift, and go to state 19


State 7

    1 input: sql_stmt_list . opt_semicolon
    3 sql_stmt_list: sql_stmt_list . ';' statement

    ';'  shift, and go to state 20

    $default  reduce using rule 33 (opt_semicolon)

    opt_semicolon  go to state 21


State 8

    2 sql_stmt_list: statement .

    $default  reduce using rule 2 (sql_stmt_list)


State 9

    6 statement: show_statement .

    $default  reduce using rule 6 (statement)


State 10

    4 statement: create_statement .

    $default  reduce using rule 4 (statement)


State 11

    5 statement: drop_statement .

    $default  reduce using rule 5 (statement)


State 12

    7 statement: select_statement .

    $default  reduce using rule 7 (statement)


State 13

    8 statement: insert_statement .

    $default  reduce using rule 8 (statement)


State 14

   10 create_statement: CREATE TABLE . table_name '(' column_def_commalist ')'

    IDENTIFIER  shift, and go to state 22

    table_name  go to state 23


State 15

   17 drop_statement: DROP TABLE . table_name

    IDENTIFIER  shift, and go to state 22

    table_name  go to state 24


State 16

    9 show_statement: SHOW TABLE . table_name

    IDENTIFIER  shift, and go to state 22

    table_name  go to state 25


State 17

   18 select_statement: SELECT '*' . FROM IDENTIFIER

    FROM  shift, and go to state 26


State 18

   19 insert_statement: INSERT INTO . table_name '(' id_comma_list ')' VALUES '(' expr_list ')'

    IDENTIFIER  shift, and go to state 22

    table_name  go to state 27


State 19

    0 $accept: input $end .

    $default  accept


State 20

    3 sql_stmt_list: sql_stmt_list ';' . statement
   32 opt_semicolon: ';' .

    CREATE  shift, and go to state 1
    DROP    shift, and go to state 2
    SHOW    shift, and go to state 3
    SELECT  shift, and go to state 4
    INSERT  shift, and go to state 5

    $default  reduce using rule 32 (opt_semicolon)

    statement         go to state 28
    show_statement    go to state 9
    create_statement  go to state 10
    drop_statement    go to state 11
    select_statement  go to state 12
    insert_statement  go to state 13


State 21

    1 input: sql_stmt_list opt_semicolon .

    $default  reduce using rule 1 (input)


State 22

   30 table_name: IDENTIFIER .
   31           | IDENTIFIER . '.' IDENTIFIER

    '.'  shift, and go to state 29

    $default  reduce using rule 30 (table_name)


State 23

   10 create_statement: CREATE TABLE table_name . '(' column_def_commalist ')'

    '('  shift, and go to state 30


State 24

   17 drop_statement: DROP TABLE table_name .

    $default  reduce using rule 17 (drop_statement)


State 25

    9 show_statement: SHOW TABLE table_name .

    $default  reduce using rule 9 (show_statement)


State 26

   18 select_statement: SELECT '*' FROM . IDENTIFIER

    IDENTIFIER  shift, and go to state 31


State 27

   19 insert_statement: INSERT INTO table_name . '(' id_comma_list ')' VALUES '(' expr_list ')'

    '('  shift, and go to state 32


State 28

    3 sql_stmt_list: sql_stmt_list ';' statement .

    $default  reduce using rule 3 (sql_stmt_list)


State 29

   31 table_name: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 33


State 30

   10 create_statement: CREATE TABLE table_name '(' . column_def_commalist ')'

    IDENTIFIER  shift, and go to state 34

    column_def_commalist  go to state 35
    column_def            go to state 36


State 31

   18 select_statement: SELECT '*' FROM IDENTIFIER .

    $default  reduce using rule 18 (select_statement)


State 32

   19 insert_statement: INSERT INTO table_name '(' . id_comma_list ')' VALUES '(' expr_list ')'

    IDENTIFIER  shift, and go to state 37

    id_comma_list  go to state 38


State 33

   31 table_name: IDENTIFIER '.' IDENTIFIER .

    $default  reduce using rule 31 (table_name)


State 34

   13 column_def: IDENTIFIER . column_type

    DOUBLE   shift, and go to state 39
    TEXT     shift, and go to state 40
    INTEGER  shift, and go to state 41

    column_type  go to state 42


State 35

   10 create_statement: CREATE TABLE table_name '(' column_def_commalist . ')'
   12 column_def_commalist: column_def_commalist . ',' column_def

    ')'  shift, and go to state 43
    ','  shift, and go to state 44


State 36

   11 column_def_commalist: column_def .

    $default  reduce using rule 11 (column_def_commalist)


State 37

   34 id_comma_list: IDENTIFIER .

    $default  reduce using rule 34 (id_comma_list)


State 38

   19 insert_statement: INSERT INTO table_name '(' id_comma_list . ')' VALUES '(' expr_list ')'
   35 id_comma_list: id_comma_list . ',' IDENTIFIER

    ')'  shift, and go to state 45
    ','  shift, and go to state 46


State 39

   15 column_type: DOUBLE .

    $default  reduce using rule 15 (column_type)


State 40

   16 column_type: TEXT .

    $default  reduce using rule 16 (column_type)


State 41

   14 column_type: INTEGER .

    $default  reduce using rule 14 (column_type)


State 42

   13 column_def: IDENTIFIER column_type .

    $default  reduce using rule 13 (column_def)


State 43

   10 create_statement: CREATE TABLE table_name '(' column_def_commalist ')' .

    $default  reduce using rule 10 (create_statement)


State 44

   12 column_def_commalist: column_def_commalist ',' . column_def

    IDENTIFIER  shift, and go to state 34

    column_def  go to state 47


State 45

   19 insert_statement: INSERT INTO table_name '(' id_comma_list ')' . VALUES '(' expr_list ')'

    VALUES  shift, and go to state 48


State 46

   35 id_comma_list: id_comma_list ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 49


State 47

   12 column_def_commalist: column_def_commalist ',' column_def .

    $default  reduce using rule 12 (column_def_commalist)


State 48

   19 insert_statement: INSERT INTO table_name '(' id_comma_list ')' VALUES . '(' expr_list ')'

    '('  shift, and go to state 50


State 49

   35 id_comma_list: id_comma_list ',' IDENTIFIER .

    $default  reduce using rule 35 (id_comma_list)


State 50

   19 insert_statement: INSERT INTO table_name '(' id_comma_list ')' VALUES '(' . expr_list ')'

    STRING        shift, and go to state 51
    BLOB_STRING   shift, and go to state 52
    INT_CONST     shift, and go to state 53
    TRUE          shift, and go to state 54
    FALSE         shift, and go to state 55
    DOUBLE_CONST  shift, and go to state 56
    NUL           shift, and go to state 57

    expr_list      go to state 58
    expr           go to state 59
    literal_value  go to state 60


State 51

   25 literal_value: STRING .

    $default  reduce using rule 25 (literal_value)


State 52

   26 literal_value: BLOB_STRING .

    $default  reduce using rule 26 (literal_value)


State 53

   23 literal_value: INT_CONST .

    $default  reduce using rule 23 (literal_value)


State 54

   28 literal_value: TRUE .

    $default  reduce using rule 28 (literal_value)


State 55

   29 literal_value: FALSE .

    $default  reduce using rule 29 (literal_value)


State 56

   24 literal_value: DOUBLE_CONST .

    $default  reduce using rule 24 (literal_value)


State 57

   27 literal_value: NUL .

    $default  reduce using rule 27 (literal_value)


State 58

   19 insert_statement: INSERT INTO table_name '(' id_comma_list ')' VALUES '(' expr_list . ')'
   21 expr_list: expr_list . ',' expr

    ')'  shift, and go to state 61
    ','  shift, and go to state 62


State 59

   20 expr_list: expr .

    $default  reduce using rule 20 (expr_list)


State 60

   22 expr: literal_value .

    $default  reduce using rule 22 (expr)


State 61

   19 insert_statement: INSERT INTO table_name '(' id_comma_list ')' VALUES '(' expr_list ')' .

    $default  reduce using rule 19 (insert_statement)


State 62

   21 expr_list: expr_list ',' . expr

    STRING        shift, and go to state 51
    BLOB_STRING   shift, and go to state 52
    INT_CONST     shift, and go to state 53
    TRUE          shift, and go to state 54
    FALSE         shift, and go to state 55
    DOUBLE_CONST  shift, and go to state 56
    NUL           shift, and go to state 57

    expr           go to state 63
    literal_value  go to state 60


State 63

   21 expr_list: expr_list ',' expr .

    $default  reduce using rule 21 (expr_list)
